# TalkDB

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: 01_quickstart.ipynb  02_conversation.ipynb  03_insight_agent.ipynb  04_community_registry.ipynb  README.md
scripts/: build_example_notebooks.py  seed_example_db.py  test_mcp_phase2.py  test_mcp_phase4.py  test_mcp_phase5.py  test_mcp_phase6.py  test_mcp_phase7.py  test_mcp_phase8.py  test_mcp_stdio.py
semantic_models/: ecommerce.yaml
src/talkdb/: __main__.py
src/talkdb/config/: __init__.py  settings.py
src/talkdb/connectors/: __init__.py  base.py  postgres.py  sqlite.py
src/talkdb/conversation/: __init__.py  resolver.py  rewriter.py  session.py
src/talkdb/core/: __init__.py  engine.py  generator.py  intent.py  transpiler.py
src/talkdb/insight/: __init__.py  analyzer.py  charter.py  narrator.py
src/talkdb/learning/: __init__.py  feedback.py  pattern_store.py
src/talkdb/registry/: __init__.py  client.py  index.py  package.py
src/talkdb/retrieval/: __init__.py  embeddings.py  hybrid_retriever.py  schema_linker.py  vector_store.py
src/talkdb/schema/: __init__.py  introspector.py  models.py  semantic_model.py
src/talkdb/server/: mcp_server.py  rest_api.py
src/talkdb/validation/: __init__.py  confidence.py  dual_path.py  execution_validator.py  schema_validator.py  shape_validator.py
src/talkdb/watchdog/: __init__.py  alerter.py  baseline.py  manager.py  scheduler.py  storage.py  watch.py
tests/: test_phase1_smoke.py  test_phase3_validation.py  test_phase4_conversation.py  test_phase5_insight.py  test_phase6_duel_path.py  test_phase7_watchdog.py  test_phase8_registry.py
tests/benchmarks/: baseline_phase4.json  baseline_phase5.json  baseline_phase6.json  cosql_compare.py  cosql_eval.py  ecommerce_suite.py  expanded_4o_lenient.json  expanded_dp.json  expanded_gpt4o.json  expanded_mini_lenient.json  expanded_nodp.json  expanded_phase8.json  hard_suite.py  run_benchmark.py
tests/benchmarks/cosql/: README.md  RESULTS.md
tests/benchmarks/cosql/results/: cosql_dev_all.json  cosql_dev_approve.json  cosql_dev_baseline.json  cosql_dev_linker.json  cosql_dev_rewriter.json
