[project]
name = "talkdb-ai"
version = "0.1.0"
description = "Autonomous data analyst: text-to-SQL with conversation, insight, monitoring, and community intelligence"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Nitin Gupta", email = "nmittal1109@gmail.com" }]
keywords = ["mcp", "text-to-sql", "nl2sql", "llm", "data-analyst", "sql", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "litellm>=1.50",
    "sqlalchemy>=2.0",
    "sqlglot>=26.0",
    "chromadb>=0.5",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
    "rank-bm25>=0.2",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
plotly = ["plotly>=5.0", "kaleido>=0.2"]
postgres = ["psycopg2-binary>=2.9"]
mysql = ["pymysql>=1.1"]
snowflake = ["snowflake-connector-python>=3.0"]
bigquery = ["google-cloud-bigquery>=3.0"]
mssql = ["pymssql>=2.3"]
pgvector = ["pgvector>=0.3"]
redis = ["redis>=5.0"]
all = ["talkdb[plotly,postgres,mysql,snowflake,bigquery,mssql,pgvector,redis]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
talkdb = "talkdb.__main__:cli"

[project.urls]
Homepage = "https://github.com/Nitin-Gupta1109/TalkDB"
Repository = "https://github.com/Nitin-Gupta1109/TalkDB"
Issues = "https://github.com/Nitin-Gupta1109/TalkDB/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talkdb"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
